crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_head_tail.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_head_tail

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/list/head as head(List[x2]) -> Option[x2]
declare head: (List[x2]) -> Option[x2]
declare println: (h) -> Unit

fn main() -> Unit =
  let v0: List[Int] = construct List::Nil#1()
  let v1: List[Int] = construct List::Cons#0(3, v0)
  let v2: List[Int] = construct List::Cons#0(2, v1)
  let v3: List[Int] = construct List::Cons#0(1, v2)
  let v4: Option[Int] = call head(v3)
  switch v4 {
    0 (v5: Int) ->
      let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v7: Unit = call println(v6, v5)
      v7
    1 ->
      let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v9: Unit = call println(v8, 0)
      v9
  }
