crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_length.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_length

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/list/length as length(List[m]) -> Int
declare length: (List[m]) -> Int
declare println: (h) -> Unit

fn main() -> Unit =
  let v1: ~List[Int] = construct List::Nil#1()
  let v2: ~List[Int] = construct List::Cons#0(3, v1)
  let v3: ~List[Int] = construct List::Cons#0(2, v2)
  let v4: ~List[Int] = construct List::Cons#0(1, v3)
  let v5: Int = call length(v4)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v0, v5)
  v6
