crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_literal_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_literal_basic

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn main() -> Int =
  let v0: List[Int] = construct List::Nil#1()
  let v1: List[Int] = construct List::Cons#0(3, v0)
  let v2: List[Int] = construct List::Cons#0(2, v1)
  let v3: List[Int] = construct List::Cons#0(1, v2)
  switch v3 {
    0 (v4: Int, v5: List[e]) ->
      v4
    1 ->
      0
  }
