crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_literal_empty.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_literal_empty

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v7(v5: Int) =
    let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v6: Unit = call println(v0, v5)
    v6
  in
  let v1: List[s11] = construct List::Nil#1()
  let v2: List[s11] = v1
  switch v2 {
    0 (v3: j, v4: List[j]) ->
      jump v7(1)
    1 ->
      jump v7(0)
  }
