crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_map.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_map

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
declare fold: (List[t1], v1, (v1, t1) -> v1) -> v1
declare map: (List[v], (v) -> x) -> List[x]
declare println: (h) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v7: (Int) -> Int = make_closure(lambda$24, [])
  let v8: List[Int] = call map(v4, v7)
  let v12: (Int, Int) -> Int = make_closure(lambda$25, [])
  let v13: Int = call fold(v8, 0, v12)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v14: Unit = call println(v0, v13)
  v14

fn lambda$24(v5: Int) -> Int =
  let v6: Int = mul_int(v5, 2)
  v6

fn lambda$25(v9: Int, v10: Int) -> Int =
  let v11: Int = add_int(v9, v10)
  v11
