crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_reverse.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_reverse

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/reverse as reverse(List[i2]) -> List[i2]
declare println: (g) -> Unit
declare reverse: (List[i2]) -> List[i2]

fn main() -> Unit =
  let v0: List[Int] = construct List::Nil#1()
  let v1: List[Int] = construct List::Cons#0(3, v0)
  let v2: List[Int] = construct List::Cons#0(2, v1)
  let v3: List[Int] = construct List::Cons#0(1, v2)
  let v4: List[Int] = call reverse(v3)
  switch v4 {
    0 (v5: Int, v6: List[d]) ->
      let v7: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v8: Unit = call println(v7, v5)
      v8
    1 ->
      let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v10: Unit = call println(v9, 0)
      v10
  }
