crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_sort_by.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_sort_by

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
declare println: (g) -> Unit
declare sort_by: (List[s5], (s5) -> h5) -> List[s5]

fn main() -> Unit =
  let v0: List[Int] = construct List::Nil#1()
  let v1: List[Int] = construct List::Cons#0(2, v0)
  let v2: List[Int] = construct List::Cons#0(1, v1)
  let v3: List[Int] = construct List::Cons#0(3, v2)
  let v5: (Int) -> Int = make_closure(lambda$26, [])
  let v6: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v7: List[Int] = call sort_by(v6, v3, v5)
  switch v7 {
    0 (v8: Int, v9: List[d]) ->
      let v10: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v11: Unit = call println(v10, v8)
      v11
    1 ->
      let v12: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v13: Unit = call println(v12, 0)
      v13
  }

fn lambda$26(v4: Int) -> Int =
  v4
