crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_sort_by_edges.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_sort_by_edges

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/list/length as length(List[m]) -> Int
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/io/println as println(h) -> Unit
declare println: (h) -> Unit
declare sort_by: (List[w5], (w5) -> l5) -> List[w5]

fn main() -> Unit =
  let v1: ~List[Int] = construct List::Nil#1()
  let v3: (Int) -> Int = make_closure(lambda$25, [])
  let v4: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v0: List[Int] = call sort_by(v4, v1, v3)
  let_join v41(v9: Unit) =
    let v11: ~List[Int] = construct List::Nil#1()
    let v12: ~List[Int] = construct List::Cons#0(42, v11)
    let v14: (Int) -> Int = make_closure(lambda$26, [])
    let v15: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v10: List[Int] = call sort_by(v15, v12, v14)
    let_join v40(v24: Unit) =
      let v26: ~List[Int] = construct List::Nil#1()
      let v27: ~List[Int] = construct List::Cons#0(1, v26)
      let v28: ~List[Int] = construct List::Cons#0(2, v27)
      let v29: ~List[Int] = construct List::Cons#0(1, v28)
      let v30: ~List[Int] = construct List::Cons#0(3, v29)
      let v32: (Int) -> Int = make_closure(lambda$27, [])
      let v33: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v25: List[Int] = call sort_by(v33, v30, v32)
      switch v25 {
        0 (v34: Int, v35: List[e]) ->
          let v36: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v37: Unit = call println(v36, v34)
          v37
        1 ->
          let v38: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v39: Unit = call println(v38, "fail")
          v39
      }
    in
    switch v10 {
      0 (v16: Int, v17: List[e]) ->
        switch v17 {
          1 ->
            let v18: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
            let v19: Unit = call println(v18, v16)
            jump v40(v19)
          _ ->
            let v20: Dict[core/show.Show, String] = get_dict core/show.Show[String]
            let v21: Unit = call println(v20, "fail")
            jump v40(v21)
        }
      _ ->
        let v22: Dict[core/show.Show, String] = get_dict core/show.Show[String]
        let v23: Unit = call println(v22, "fail")
        jump v40(v23)
    }
  in
  switch v0 {
    1 ->
      let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v6: Unit = call println(v5, "empty")
      jump v41(v6)
    _ ->
      let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v8: Unit = call println(v7, "fail")
      jump v41(v8)
  }

fn lambda$25(v2: Int) -> Int =
  v2

fn lambda$26(v13: Int) -> Int =
  v13

fn lambda$27(v31: Int) -> Int =
  v31
