crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__map_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__map_basic

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/map/empty as empty() -> Map[a9, b9]
import core/map/put as put(Map[s9, t9], s9, t9) -> Map[s9, t9]
import core/map/put as put(~MapBuilder[c10, d10], c10, d10) -> ~MapBuilder[c10, d10]
import core/map/get as get(Map[p10, b11], p10) -> Option[b11]
declare empty: () -> Map[a9, b9]
declare get: (Map[p10, b11], p10) -> Option[b11]
declare println: (g) -> Unit
declare put: (Map[s9, t9], s9, t9) -> Map[s9, t9]

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v0: Map[String, Int] = call put(v2, v3, v1, "key", 42)
  let v4: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v5: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v6: Option[Int] = call get(v4, v5, v0, "key")
  switch v6 {
    0 (v7: Int) ->
      let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v9: Unit = call println(v8, v7)
      v9
    1 ->
      let v10: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v11: Unit = call println(v10, 0)
      v11
  }
