crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__map_builder.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__map_builder

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/map/builder as builder() -> ~MapBuilder[d9, e9]
import core/map/put as put(Map[n9, o9], n9, o9) -> Map[n9, o9]
import core/map/put as put(~MapBuilder[x9, y9], x9, y9) -> ~MapBuilder[x9, y9]
import core/map/freeze as freeze(~MapBuilder[g10, h10]) -> Map[g10, h10]
import core/map/get as get(Map[k10, w10], k10) -> Option[w10]
import core/map/size as size(Map[j14, k14]) -> Int
declare builder: () -> ~MapBuilder[d9, e9]
declare freeze: (~MapBuilder[g10, h10]) -> Map[g10, h10]
declare get: (Map[k10, w10], k10) -> Option[w10]
declare println: (g) -> Unit
declare put: (~MapBuilder[x9, y9], x9, y9) -> ~MapBuilder[x9, y9]
declare size: (Map[j14, k14]) -> Int

fn main() -> Unit =
  let v0: ~MapBuilder[x14, y14] = call builder()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v1: ~MapBuilder[String, Int] = call put(v2, v3, v0, "a", 1)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: ~MapBuilder[String, Int] = call put(v5, v6, v1, "b", 2)
  let v8: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v9: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v7: ~MapBuilder[String, Int] = call put(v8, v9, v4, "answer", 42)
  let v10: Map[String, Int] = call freeze(v7)
  let v11: Int = call size(v10)
  let v12: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v13: Unit = call println(v12, v11)
  let v14: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v15: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v16: Option[Int] = call get(v14, v15, v10, "answer")
  switch v16 {
    0 (v17: Int) ->
      let v18: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v19: Unit = call println(v18, v17)
      v19
    1 ->
      let v20: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v21: Unit = call println(v20, 0)
      v21
  }
