crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__map_collections.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__map_collections

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/map/empty as empty() -> Map[b9, c9]
import core/map/put as put(Map[f9, g9], f9, g9) -> Map[f9, g9]
import core/map/from_list as from_list(List[(z12, a13)]) -> Map[z12, a13]
import core/map/size as size(Map[g13, h13]) -> Int
import core/map/merge as merge(Map[n13, o13], Map[n13, o13]) -> Map[n13, o13]
declare empty: () -> Map[b9, c9]
declare from_list: (List[(z12, a13)]) -> Map[z12, a13]
declare merge: (Map[n13, o13], Map[n13, o13]) -> Map[n13, o13]
declare println: (h) -> Unit
declare put: (Map[f9, g9], f9, g9) -> Map[f9, g9]
declare size: (Map[g13, h13]) -> Int

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: Map[String, Int] = call put(v2, v3, v1, "a", 1)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v0: Map[String, Int] = call put(v5, v6, v4, "b", 2)
  let v8: Map[String, Int] = call empty()
  let v9: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v10: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v7: Map[String, Int] = call put(v9, v10, v8, "c", 3)
  let v12: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v13: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v11: Map[String, Int] = call merge(v12, v13, v0, v7)
  let v14: Int = call size(v11)
  let v15: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v16: Unit = call println(v15, v14)
  let v18: (~String, ~Int) = tuple("x", 10)
  let v19: (~String, ~Int) = tuple("y", 20)
  let v20: (~String, ~Int) = tuple("z", 30)
  let v21: ~List[(~String, ~Int)] = construct List::Nil#1()
  let v22: ~List[(~String, ~Int)] = construct List::Cons#0(v20, v21)
  let v23: ~List[(~String, ~Int)] = construct List::Cons#0(v19, v22)
  let v24: ~List[(~String, ~Int)] = construct List::Cons#0(v18, v23)
  let v25: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v26: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v17: Map[~String, ~Int] = call from_list(v25, v26, v24)
  let v28: Int = call size(v17)
  let v27: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v29: Unit = call println(v27, v28)
  v29
