crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__map_dict_singleton.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__map_dict_singleton

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/map/empty as empty() -> Map[b9, c9]
import core/map/put as put(Map[f9, g9], f9, g9) -> Map[f9, g9]
import core/map/get as get(Map[o9, a10], o9) -> Option[a10]
import core/map/contains as contains(Map[k10, l10], k10) -> Bool
import core/map/from_list as from_list(List[(z12, a13)]) -> Map[z12, a13]
import core/map/size as size(Map[g13, h13]) -> Int
declare contains: (Map[k10, l10], k10) -> Bool
declare empty: () -> Map[b9, c9]
declare from_list: (List[(z12, a13)]) -> Map[z12, a13]
declare get: (Map[o9, a10], o9) -> Option[a10]
declare println: (h) -> Unit
declare put: (Map[f9, g9], f9, g9) -> Map[f9, g9]
declare size: (Map[g13, h13]) -> Int

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: Map[String, Int] = call put(v2, v3, v1, "a", 42)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v0: Map[String, Int] = call put(v5, v6, v4, "b", 99)
  let_join v32(v15: Unit) =
    let v16: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
    let v17: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
    let v18: Bool = call contains(v16, v17, v0, "b")
    let v19: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v20: Unit = call println(v19, v18)
    let v22: (String, Int) = tuple("hello", 1)
    let v23: (String, Int) = tuple("world", 2)
    let v24: ~List[(String, Int)] = construct List::Nil#1()
    let v25: ~List[(String, Int)] = construct List::Cons#0(v23, v24)
    let v26: ~List[(String, Int)] = construct List::Cons#0(v22, v25)
    let v27: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
    let v28: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
    let v21: Map[String, Int] = call from_list(v27, v28, v26)
    let v30: Int = call size(v21)
    let v29: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v31: Unit = call println(v29, v30)
    v31
  in
  let v7: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v8: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v9: Option[Int] = call get(v7, v8, v0, "a")
  switch v9 {
    0 (v10: Int) ->
      let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v12: Unit = call println(v11, v10)
      jump v32(v12)
    1 ->
      let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v14: Unit = call println(v13, 0)
      jump v32(v14)
  }
